--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -1,4 +1,3 @@
-
 <header class="<%= current_page?(root_path) ? "hero" : "hero small" %>">
   <section class="title">
     <h3>Welcome to</h3>
@@ -57,32 +56,32 @@
           <ul class="dropdown-menu dropdown-menu-dark">
             <li><%= link_to 'Dashboard', [:admin, :root], class: "nav-link" %></li>
             <li><%= link_to 'Products', [:admin, :products], class: "nav-link" %></li>
+            <li><%= link_to 'Categories', [:admin, :categories], class: "nav-link" %></li>
           </ul>
         </li>
         <li class="nav-item end-0">
           <%= link_to cart_path, class: "nav-link " do %> <%= fa_icon "shopping-cart" %>
-          My Cart (<%= cart.size %>) <% end %>
+          My Cart (<%= cart.size %>) 
+          <% end %>
         </li>
+
+        <% if current_user %>
+        <li>
+          Signed in as <%= current_user.first_name %>
+        </li>
+        <li>
+          <%= link_to "Logout", '/logout' %>
+        </li>
+        <% else %>
+        <li class="btn btn-secondary">
+          <%= link_to 'Login', '/login' %>
+        </li>
+        <li class="btn btn-secondary" >
+          <%= link_to 'Signup', '/signup' %>
+        </li>
+      <% end %>
+
       </ul>
     </div>
   </div>
 </nav>
-<script>
-(function(){
-const gnr = () => {
-    const uptitle = document.querySelector("section.title h3");
-    const subtitle = document.querySelector("section.title h2");
-    const header = document.querySelector("header.hero");
-
-    uptitle.style.fontSize = "5em";
-    uptitle.style.fontWeight = 900;
-    uptitle.style.textAlign = "center";
-
-    subtitle.innerHTML =
-      "<p>Watch it bring you to your</p><p> shu-n-n-n-n-n-n-n-n knees, knees!</p>";
-  };
-  const title = document.querySelector("header.hero");
-  title.addEventListener("dblclick", gnr);
-  
-})()
-  </script>
